<resources>
    <string name="app_name">Hospital_one</string>
    <string name="title_activity_login_hospital">HIT医疗</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="passworeRemeber">记住密码</string>
    <string name="password_remember">记住账号</string>
    <string name="todo">TODO</string>
    <string name="SEARCH">搜索</string>
    <string name="register_button">提交</string>
    <string name="register_resure_password">确认密码</string>
    <string name="register_password">密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_username">用户名</string>
    <string name="title_activity_forget_password">忘记密码</string>
    <string name="title_activity_register">Sign in</string>
    <string name="gerexinxi">个人信息</string>
</resources>
