<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <!-- Login progress -->
    <LinearLayout
            android:background="#3f51b5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textView19"
                android:layout_weight="1"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

            <TextView
                    android:text="@string/title_activity_login_hospital"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView20"
                    android:layout_weight="5"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"/>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/textView18"
                android:layout_weight="1"/>
    </LinearLayout>

    <ProgressBar
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/forget_password_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/forget_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/forget_password_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/forget_password_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/forget_password_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/register_button"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>